@@ -1,20 +1,19 @@
 
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.012.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.020.
 use strict;
 use warnings;
 
 
 
-use ExtUtils::MakeMaker 6.30;
+use ExtUtils::MakeMaker ;
 
 
 
 my %WriteMakefileArgs = (
   "ABSTRACT" => "Perl interface to the 3.x series of the gtk+ toolkit",
   "AUTHOR" => "Torsten Schoenfeld <kaffeetisch\@gmx.de>",
-  "BUILD_REQUIRES" => {},
   "CONFIGURE_REQUIRES" => {
-    "ExtUtils::MakeMaker" => "6.30"
+    "ExtUtils::MakeMaker" => 0
   },
   "DISTNAME" => "Gtk3",
   "EXE_FILES" => [],
@@ -27,8 +26,7 @@ my %WriteMakefileArgs = (
     "Glib::Object::Introspection" => "0.016",
     "Test::Simple" => "0.96"
   },
-  "TEST_REQUIRES" => {},
-  "VERSION" => "0.017",
+  "VERSION" => "0.018",
   "test" => {
     "TESTS" => "t/*.t"
   }
