@@ -1,5 +1,5 @@
 name    = Gtk3
-version = 0.017
+version = 0.018
 author  = Torsten Schoenfeld <kaffeetisch@gmx.de>
 license = LGPL_2_1
 copyright_holder = Torsten Schoenfeld
@@ -39,6 +39,7 @@ repository.url    = git://git.gnome.org/perl-Gtk3
 repository.web    = http://git.gnome.org/browse/perl-Gtk3
 repository.type   = git
 x_twitter         = https://twitter.com/GTKPerl
+x_IRC             = irc://irc.gimp.org/#gtk-perl
 
 [Git::Check]
 changelog = NEWS
